--- a/src/State/state_base/package.xml
+++ b/src/State/state_base/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>sensing_base</name>
+  <name>state_base</name>
   <version>0.0.0</version>
   <description>TODO: Package description</description>
   <maintainer email="2893734607@qq.com">ethereal</maintainer>
