--- a/src/Bringup/decision_bringup/CMakeLists.txt
+++ b/src/Bringup/decision_bringup/CMakeLists.txt
@@ -1,5 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
 
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
+
 project(decision_bringup)
 
 find_package(ament_cmake REQUIRED)
