added scan_saving function in coordinate_marker

--- a/src/Others/coordinate_marker/CMakeLists.txt
+++ b/src/Others/coordinate_marker/CMakeLists.txt
@@ -4,12 +4,14 @@ project(coordinate_marker)
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
+find_package(sensor_msgs REQUIRED)
 
 add_executable(${PROJECT_NAME} src/coordinate_marker.cpp)
 
 ament_target_dependencies(${PROJECT_NAME}
   rclcpp
   geometry_msgs
+  sensor_msgs
 )
 
 install(TARGETS
