added scan_record; reformed coordinate_marker

--- a/src/Others/coordinate_marker/CMakeLists.txt
+++ b/src/Others/coordinate_marker/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(scan_record REQUIRED)
 
 add_executable(${PROJECT_NAME} src/coordinate_marker.cpp)
 
@@ -12,6 +13,7 @@ ament_target_dependencies(${PROJECT_NAME}
   rclcpp
   geometry_msgs
   sensor_msgs
+  scan_record
 )
 
 install(TARGETS
