reformed test feedback part

--- a/src/Test/test_taker/CMakeLists.txt
+++ b/src/Test/test_taker/CMakeLists.txt
@@ -3,6 +3,7 @@ project(test_taker)
 
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(std_msgs REQUIRED)
 find_package(test_taker_interfaces REQUIRED)
 
 add_executable(${PROJECT_NAME} src/test_taker.cpp)
@@ -10,6 +11,7 @@ add_executable(${PROJECT_NAME} src/test_taker.cpp)
 ament_target_dependencies(${PROJECT_NAME}
   rclcpp
   test_taker_interfaces
+  std_msgs
 )
 
 install(TARGETS
