--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-.vscode
-build
-install
-log
-src/Others/pb_rm_interfaces
+/build
+/install
+/log
+/.vscode
+/coordinate_marks
+/src/Others/pb_rm_interfaces
