--- a/src/Decision/decision_test_alpha/package.xml
+++ b/src/Decision/decision_test_alpha/package.xml
@@ -11,6 +11,7 @@
 
   <depend>rclcpp</depend>
   <depend>decision_beta</depend>
+  <depend>pb_rm_interfaces</depend>
   <depend>rm_decision_macros</depend>
 
   <test_depend>ament_lint_auto</test_depend>
